plugins {
    id 'org.jetbrains.kotlin.jvm'
}/*
 * Copyright (c) 2021 EmeraldPay Inc, All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

dependencies {
    api project(':etherjar-hex')
    api project(':etherjar-domain')

    api "com.fasterxml.jackson.core:jackson-core:2.19.2"
    api "com.fasterxml.jackson.core:jackson-databind:2.19.2"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
repositories {
    mavenCentral()
}
kotlin {
    jvmToolchain(17)
}
